1.9.0/datasheet/executable-analysis/supported-malwares-for-config-extraction.md
---
type: page
title: Supported malware families for config extraction
listed: true
description: 
index_title: Supported malware families for config extraction
hidden: false
keywords: 
tags: 
---

Malware configuration extraction is crucial because it provides critical insights into the inner workings of malicious software. By uncovering details such as Command and Control servers, campaign identifiers, and other settings, cybersecurity experts can develop targeted countermeasures. This knowledge empowers them to detect, prevent, and mitigate the impact of malware attacks more effectively. In essence, malware configuration extraction serves as a key tool in fortifying digital defenses against evolving and sophisticated threats.

Our malware configuration extraction system can extract the configuration of over 14 malware families. You can also search them by tags, which can be found as the second column of the table below:

{% table layout="auto" %}
{% row %}
{% cell header=true %}
Supported malware's name
{% /cell %}
{% cell header=true %}
Tag to search for in FileScan
{% /cell %}
{% /row %}
{% row %}
{% cell %}
Async RAT
{% /cell %}
{% cell %}
{% badge text="asyncrat" type="error" /%}
{% /cell %}
{% /row %}
{% row %}
{% cell %}
Azorult
{% /cell %}
{% cell %}
{% badge text="azorult" type="error" /%}
{% /cell %}
{% /row %}
{% row %}
{% cell %}
Bitter RAT
{% /cell %}
{% cell %}
{% badge text="bitter_zxxz" type="error" /%}
{% /cell %}
{% /row %}
{% row %}
{% cell %}
Caliber
{% /cell %}
{% cell %}
{% badge text="44caliber" type="error" /%}
{% /cell %}
{% /row %}
{% row %}
{% cell %}
Citadel
{% /cell %}
{% cell %}
{% badge text="citadel" type="error" /%}
{% /cell %}
{% /row %}
{% row %}
{% cell %}
Darkcloud stealer
{% /cell %}
{% cell %}
{% badge text="darkcloud" type="error" /%}
{% /cell %}
{% /row %}
{% row %}
{% cell %}
Dridex stealer
{% /cell %}
{% cell %}
{% badge text="dridex_loader" type="error" /%}
{% /cell %}
{% /row %}
{% row %}
{% cell %}
Dynamic RAT
{% /cell %}
{% cell %}
{% badge text="dynamicrat" type="error" /%}
{% /cell %}
{% /row %}
{% row %}
{% cell %}
Emotet
{% /cell %}
{% cell %}
{% badge text="emotet" type="error" /%}
{% /cell %}
{% /row %}
{% row %}
{% cell %}
Hancitor
{% /cell %}
{% cell %}
{% badge text="hancitor" type="error" /%}
{% /cell %}
{% /row %}
{% row %}
{% cell %}
IcedID (BokBot)
{% /cell %}
{% cell %}
{% badge text="icedid_peloader" type="error" /%} {% badge text="icedid_photoloader" type="error" /%}
{% /cell %}
{% /row %}
{% row %}
{% cell %}
Knotweed
{% /cell %}
{% cell %}
{% badge text="knotweed_jumplump" type="error" /%}
{% /cell %}
{% /row %}
{% row %}
{% cell %}
Redline
{% /cell %}
{% cell %}
{% badge text="redline" type="error" /%}
{% /cell %}
{% /row %}
{% row %}
{% cell %}
ZLoader
{% /cell %}
{% cell %}
{% badge text="zloader" type="error" /%}
{% /cell %}
{% /row %}
{% /table %}

---

RedLine malware stands out as one of the most prevalent threats encountered in the wild. This infostealer variant is notorious for its ability to clandestinely gather sensitive information while potentially deploying additional malicious payloads. Its adaptability and widespread availability make it a significant threat, causing financial losses and data exposure for both individuals and businesses. Extracting the malware configuration is of paramount importance as it unveils critical details about RedLine's Command and Control (C2) infrastructure, campaign identifiers, and others significant settings needed to know its behaviour. This intelligence enables cybersecurity experts to develop targeted countermeasures, enhancing the capacity to detect, prevent, and mitigate the impact of RedLine attacks.

Let's see how Filescan can detect a Redline sample and extract succesfully its configuration, being able to extract a new IOC which was previously encrypted.

{% callout type="success" title="Malware Configuration Extraction" %}
On the following link you can find the sample from the screenshot below:

[https://www.filescan.io/uploads/64f1d240d7ae0984751013ae/reports/e80849b3-7eb7-4c3b-9d55-0dc49c15674b/overview](https://www.filescan.io/uploads/64f1d240d7ae0984751013ae/reports/e80849b3-7eb7-4c3b-9d55-0dc49c15674b/overview)

[https://www.filescan.io/uploads/6502117c9bae8a378555f25f/reports/a50dfc89-c1e4-4dfc-8721-f7c151c14d5f/files](https://www.filescan.io/uploads/6502117c9bae8a378555f25f/reports/a50dfc89-c1e4-4dfc-8721-f7c151c14d5f/files)
{% /callout %}

{% image url="https://uploads.developerhub.io/prod/XX2D/0j9uesjw7t08435uvib4cvvypy90onx51ijrv2oskiuxc1j5qrp4aew830atgnvs.png" /%}
